// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`convertTotals > should correctly convert attributes in first dim and measure group in second dim 1`] = `
[
  {
    "function": "SUM",
    "localIdentifier": "total_sum_m1_by_localAttr1_0",
    "metric": "m1",
    "totalDimensions": [
      {
        "dimensionIdentifier": "dim_1",
        "totalDimensionItems": [
          "measureGroup",
        ],
      },
    ],
  },
]
`;

exports[`convertTotals > should correctly convert column total and row subtotal 1`] = `
[
  {
    "function": "SUM",
    "localIdentifier": "total_sum_m_abZgFKGPaGYM_by_a_label.opportunitysnapshot.forecastcategory_0",
    "metric": "m_abZgFKGPaGYM",
    "totalDimensions": [
      {
        "dimensionIdentifier": "dim_1",
        "totalDimensionItems": [
          "a_label.owner.department",
          "a_label.stage.isactive",
          "measureGroup",
        ],
      },
      {
        "dimensionIdentifier": "dim_0",
        "totalDimensionItems": [
          "a_label.account.id.name",
        ],
      },
    ],
  },
  {
    "function": "SUM",
    "localIdentifier": "total_sum_m_abZgFKGPaGYM_by_a_label.stage.isactive_1",
    "metric": "m_abZgFKGPaGYM",
    "totalDimensions": [
      {
        "dimensionIdentifier": "dim_0",
        "totalDimensionItems": [
          "a_label.account.id.name",
          "a_label.opportunitysnapshot.forecastcategory",
        ],
      },
      {
        "dimensionIdentifier": "dim_1",
        "totalDimensionItems": [
          "a_label.owner.department",
          "measureGroup",
        ],
      },
    ],
  },
  {
    "function": "SUM",
    "localIdentifier": "subtotal_column_sum_m_abZgFKGPaGYM_by_a_label.opportunitysnapshot.forecastcategory_0",
    "metric": "m_abZgFKGPaGYM",
    "totalDimensions": [
      {
        "dimensionIdentifier": "dim_0",
        "totalDimensionItems": [
          "a_label.account.id.name",
        ],
      },
      {
        "dimensionIdentifier": "dim_1",
        "totalDimensionItems": [
          "measureGroup",
        ],
      },
    ],
  },
]
`;

exports[`convertTotals > should correctly convert measure group and attribute in one dimension 1`] = `
[
  {
    "function": "SUM",
    "localIdentifier": "total_sum_m1_by_localAttr1_1",
    "metric": "m1",
    "totalDimensions": [
      {
        "dimensionIdentifier": "dim_0",
        "totalDimensionItems": [
          "measureGroup",
          "localAttr2",
        ],
      },
    ],
  },
]
`;

exports[`convertTotals > should correctly convert multiple totals with various functions 1`] = `
[
  {
    "function": "SUM",
    "localIdentifier": "total_sum_m1_by_localAttr1_0",
    "metric": "m1",
    "totalDimensions": [
      {
        "dimensionIdentifier": "dim_1",
        "totalDimensionItems": [
          "measureGroup",
        ],
      },
    ],
  },
  {
    "function": "SUM",
    "localIdentifier": "total_sum_m2_by_localAttr1_0",
    "metric": "m2",
    "totalDimensions": [
      {
        "dimensionIdentifier": "dim_1",
        "totalDimensionItems": [
          "measureGroup",
        ],
      },
    ],
  },
  {
    "function": "MAX",
    "localIdentifier": "total_max_m2_by_localAttr1_0",
    "metric": "m2",
    "totalDimensions": [
      {
        "dimensionIdentifier": "dim_1",
        "totalDimensionItems": [
          "measureGroup",
        ],
      },
    ],
  },
  {
    "function": "MIN",
    "localIdentifier": "total_min_m1_by_localAttr1_0",
    "metric": "m1",
    "totalDimensions": [
      {
        "dimensionIdentifier": "dim_1",
        "totalDimensionItems": [
          "measureGroup",
        ],
      },
    ],
  },
]
`;

exports[`convertTotals > should correctly convert no totals 1`] = `[]`;

exports[`convertTotals > should correctly convert row total and column subtotal 1`] = `
[
  {
    "function": "SUM",
    "localIdentifier": "total_sum_m_abZgFKGPaGYM_by_a_label.opportunitysnapshot.forecastcategory_0",
    "metric": "m_abZgFKGPaGYM",
    "totalDimensions": [
      {
        "dimensionIdentifier": "dim_1",
        "totalDimensionItems": [
          "a_label.owner.department",
          "a_label.stage.isactive",
          "measureGroup",
        ],
      },
      {
        "dimensionIdentifier": "dim_0",
        "totalDimensionItems": [
          "a_label.account.id.name",
        ],
      },
    ],
  },
  {
    "function": "SUM",
    "localIdentifier": "total_sum_m_abZgFKGPaGYM_by_a_label.stage.isactive_1",
    "metric": "m_abZgFKGPaGYM",
    "totalDimensions": [
      {
        "dimensionIdentifier": "dim_0",
        "totalDimensionItems": [
          "a_label.account.id.name",
          "a_label.opportunitysnapshot.forecastcategory",
        ],
      },
      {
        "dimensionIdentifier": "dim_1",
        "totalDimensionItems": [
          "a_label.owner.department",
          "measureGroup",
        ],
      },
    ],
  },
  {
    "function": "SUM",
    "localIdentifier": "subtotal_row_sum_m_abZgFKGPaGYM_by_a_label.account.id.name_0",
    "metric": "m_abZgFKGPaGYM",
    "totalDimensions": [
      {
        "dimensionIdentifier": "dim_1",
        "totalDimensionItems": [
          "a_label.owner.department",
          "measureGroup",
        ],
      },
    ],
  },
]
`;

exports[`convertTotals > should correctly convert subtotal 1`] = `
[
  {
    "function": "SUM",
    "localIdentifier": "total_sum_m1_by_localAttr1_0",
    "metric": "m1",
    "totalDimensions": [
      {
        "dimensionIdentifier": "dim_1",
        "totalDimensionItems": [
          "localAttr3",
          "measureGroup",
        ],
      },
    ],
  },
  {
    "function": "SUM",
    "localIdentifier": "total_sum_m1_by_localAttr2_0",
    "metric": "m1",
    "totalDimensions": [
      {
        "dimensionIdentifier": "dim_1",
        "totalDimensionItems": [
          "localAttr3",
          "measureGroup",
        ],
      },
      {
        "dimensionIdentifier": "dim_0",
        "totalDimensionItems": [
          "localAttr1",
        ],
      },
    ],
  },
]
`;

exports[`convertTotals > should correctly convert subtotals with non-sorted totals 1`] = `
[
  {
    "function": "SUM",
    "localIdentifier": "total_sum_m_abZgFKGPaGYM_by_a_label.owner.department_1",
    "metric": "m_abZgFKGPaGYM",
    "totalDimensions": [
      {
        "dimensionIdentifier": "dim_0",
        "totalDimensionItems": [
          "a_label.account.id.name",
          "a_label.opportunitysnapshot.forecastcategory",
        ],
      },
      {
        "dimensionIdentifier": "dim_1",
        "totalDimensionItems": [
          "measureGroup",
        ],
      },
    ],
  },
  {
    "function": "SUM",
    "localIdentifier": "total_sum_m_acugFHNJgsBy_by_a_label.owner.department_1",
    "metric": "m_acugFHNJgsBy",
    "totalDimensions": [
      {
        "dimensionIdentifier": "dim_0",
        "totalDimensionItems": [
          "a_label.account.id.name",
          "a_label.opportunitysnapshot.forecastcategory",
        ],
      },
      {
        "dimensionIdentifier": "dim_1",
        "totalDimensionItems": [
          "measureGroup",
        ],
      },
    ],
  },
]
`;

exports[`convertTotals > should correctly convert three dimensions 1`] = `
[
  {
    "function": "SUM",
    "localIdentifier": "total_sum_m1_by_localAttr1_0",
    "metric": "m1",
    "totalDimensions": [
      {
        "dimensionIdentifier": "dim_1",
        "totalDimensionItems": [
          "measureGroup",
        ],
      },
      {
        "dimensionIdentifier": "dim_2",
        "totalDimensionItems": [
          "localAttr2",
        ],
      },
    ],
  },
  {
    "function": "SUM",
    "localIdentifier": "total_sum_m1_by_localAttr2_2",
    "metric": "m1",
    "totalDimensions": [
      {
        "dimensionIdentifier": "dim_0",
        "totalDimensionItems": [
          "localAttr1",
        ],
      },
      {
        "dimensionIdentifier": "dim_1",
        "totalDimensionItems": [
          "measureGroup",
        ],
      },
    ],
  },
]
`;

exports[`convertTotals > should correctly convert three totals with the same function 1`] = `
[
  {
    "function": "SUM",
    "localIdentifier": "total_sum_m1_by_localAttr1_0",
    "metric": "m1",
    "totalDimensions": [
      {
        "dimensionIdentifier": "dim_1",
        "totalDimensionItems": [
          "localAttr3",
          "measureGroup",
        ],
      },
    ],
  },
  {
    "function": "SUM",
    "localIdentifier": "total_sum_m2_by_localAttr1_0",
    "metric": "m2",
    "totalDimensions": [
      {
        "dimensionIdentifier": "dim_1",
        "totalDimensionItems": [
          "localAttr3",
          "measureGroup",
        ],
      },
    ],
  },
  {
    "function": "SUM",
    "localIdentifier": "total_sum_m3_by_localAttr1_0",
    "metric": "m3",
    "totalDimensions": [
      {
        "dimensionIdentifier": "dim_1",
        "totalDimensionItems": [
          "localAttr3",
          "measureGroup",
        ],
      },
    ],
  },
]
`;

exports[`convertTotals > should correctly convert total on dimension with measure group 1`] = `
[
  {
    "function": "SUM",
    "localIdentifier": "total_sum_m1_by_localAttr1_0",
    "metric": "m1",
    "totalDimensions": [
      {
        "dimensionIdentifier": "dim_1",
        "totalDimensionItems": [
          "localAttr3",
        ],
      },
      {
        "dimensionIdentifier": "dim_0",
        "totalDimensionItems": [
          "measureGroup",
        ],
      },
    ],
  },
]
`;

exports[`convertTotals > should correctly convert total on single dimension result spec 1`] = `
[
  {
    "function": "SUM",
    "localIdentifier": "total_sum_m1_by_localAttr1_0",
    "metric": "m1",
    "totalDimensions": [
      {
        "dimensionIdentifier": "dim_0",
        "totalDimensionItems": [
          "measureGroup",
        ],
      },
    ],
  },
]
`;

exports[`convertTotals > should correctly convert total without any measure group 1`] = `
[
  {
    "function": "SUM",
    "localIdentifier": "total_sum_m1_by_localAttr1_0",
    "metric": "m1",
    "totalDimensions": [
      {
        "dimensionIdentifier": "dim_1",
        "totalDimensionItems": [
          "localAttr3",
        ],
      },
    ],
  },
]
`;

exports[`convertTotals > should correctly convert two subtotals and marginal total 1`] = `
[
  {
    "function": "SUM",
    "localIdentifier": "total_sum_m_abZgFKGPaGYM_by_a_label.opportunitysnapshot.forecastcategory_0",
    "metric": "m_abZgFKGPaGYM",
    "totalDimensions": [
      {
        "dimensionIdentifier": "dim_1",
        "totalDimensionItems": [
          "a_label.owner.department",
          "a_label.stage.isactive",
          "measureGroup",
        ],
      },
      {
        "dimensionIdentifier": "dim_0",
        "totalDimensionItems": [
          "a_label.account.id.name",
        ],
      },
    ],
  },
  {
    "function": "SUM",
    "localIdentifier": "total_sum_m_abZgFKGPaGYM_by_a_label.stage.isactive_1",
    "metric": "m_abZgFKGPaGYM",
    "totalDimensions": [
      {
        "dimensionIdentifier": "dim_0",
        "totalDimensionItems": [
          "a_label.account.id.name",
          "a_label.opportunitysnapshot.forecastcategory",
        ],
      },
      {
        "dimensionIdentifier": "dim_1",
        "totalDimensionItems": [
          "a_label.owner.department",
          "measureGroup",
        ],
      },
    ],
  },
  {
    "function": "SUM",
    "localIdentifier": "marginal_total_sum_m_abZgFKGPaGYM_by_a_label.opportunitysnapshot.forecastcategory_0",
    "metric": "m_abZgFKGPaGYM",
    "totalDimensions": [
      {
        "dimensionIdentifier": "dim_0",
        "totalDimensionItems": [
          "a_label.account.id.name",
        ],
      },
      {
        "dimensionIdentifier": "dim_1",
        "totalDimensionItems": [
          "a_label.owner.department",
          "measureGroup",
        ],
      },
    ],
  },
]
`;

exports[`convertTotals > should correctly convert two totals and grand total 1`] = `
[
  {
    "function": "SUM",
    "localIdentifier": "total_sum_m_abZgFKGPaGYM_by_a_label.account.id.name_0",
    "metric": "m_abZgFKGPaGYM",
    "totalDimensions": [
      {
        "dimensionIdentifier": "dim_1",
        "totalDimensionItems": [
          "a_label.owner.department",
          "measureGroup",
        ],
      },
    ],
  },
  {
    "function": "SUM",
    "localIdentifier": "total_sum_m_abZgFKGPaGYM_by_a_label.owner.department_1",
    "metric": "m_abZgFKGPaGYM",
    "totalDimensions": [
      {
        "dimensionIdentifier": "dim_0",
        "totalDimensionItems": [
          "a_label.account.id.name",
        ],
      },
      {
        "dimensionIdentifier": "dim_1",
        "totalDimensionItems": [
          "measureGroup",
        ],
      },
    ],
  },
  {
    "function": "SUM",
    "localIdentifier": "total_of_totals_sum_m_abZgFKGPaGYM_by_a_label.account.id.name_0",
    "metric": "m_abZgFKGPaGYM",
    "totalDimensions": [
      {
        "dimensionIdentifier": "dim_1",
        "totalDimensionItems": [
          "measureGroup",
        ],
      },
    ],
  },
]
`;

exports[`convertTotals > should correctly convert two totals with different functions 1`] = `
[
  {
    "function": "SUM",
    "localIdentifier": "total_sum_m1_by_localAttr1_0",
    "metric": "m1",
    "totalDimensions": [
      {
        "dimensionIdentifier": "dim_1",
        "totalDimensionItems": [
          "localAttr3",
          "measureGroup",
        ],
      },
    ],
  },
  {
    "function": "MIN",
    "localIdentifier": "total_min_m1_by_localAttr1_0",
    "metric": "m1",
    "totalDimensions": [
      {
        "dimensionIdentifier": "dim_1",
        "totalDimensionItems": [
          "localAttr3",
          "measureGroup",
        ],
      },
    ],
  },
]
`;

exports[`convertTotals > should fail on converting native total 1`] = `"Tiger backend does not support native totals."`;
